@@ -7,48 +7,49 @@
     <version>1.0.1-SNAPSHOT</version>
 
     <properties>
+        <atlantafx-base.version>2.0.1</atlantafx-base.version>
         <caffeine.version>3.1.8</caffeine.version>
+        <commons-codec.version>1.16.0</commons-codec.version>
+        <commons-collections4.version>4.4</commons-collections4.version>
+        <commons-io.version>2.15.0</commons-io.version>
         <controlsfx.version>11.1.2</controlsfx.version>
+        <cssfx.version>11.5.1</cssfx.version>
         <eclipse-collections-api.version>11.1.0</eclipse-collections-api.version>
         <ikonli-bom.version>12.3.1</ikonli-bom.version>
+        <imageio-jpeg.version>3.10.0</imageio-jpeg.version>
+        <jackson-dataformat-yaml.version>2.15.1</jackson-dataformat-yaml.version>
+        <java-does-usb.version>0.6.1</java-does-usb.version>
         <java.version>21</java.version>
         <javafx.version>21.0.1</javafx.version>
+        <jmh.version>1.37</jmh.version>
+        <jool.version>0.9.15</jool.version>
+        <jsr305.version>3.0.2</jsr305.version>
+        <libjpeg-turbo.version>2.1.3</libjpeg-turbo.version>
         <lombok.version>1.18.30</lombok.version>
         <mapstruct.version>1.5.5.Final</mapstruct.version>
         <maven-compiler-plugin.version>0.2.0</maven-compiler-plugin.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
+        <metadata-extractor.version>2.18.0</metadata-extractor.version>
+        <opencv.version>4.7.0-0</opencv.version>
+        <oshi-core.version>6.4.6</oshi-core.version>
         <preferencesfx-core.version>11.16.0</preferencesfx-core.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <resource.delimiter>@</resource.delimiter>
-        <spring-boot-javafx-starter.version>1.0.4-SNAPSHOT</spring-boot-javafx-starter.version>
-        <spring-boot.version>3.1.5</spring-boot.version>
-        <imageio-jpeg.version>3.10.0</imageio-jpeg.version>
-        <jmh.version>1.37</jmh.version>
-        <libjpeg-turbo.version>2.1.3</libjpeg-turbo.version>
-        <commons-codec.version>1.16.0</commons-codec.version>
-        <jackson-dataformat-yaml.version>2.15.1</jackson-dataformat-yaml.version>
-        <commons-collections4.version>4.4</commons-collections4.version>
-        <commons-io.version>2.15.0</commons-io.version>
-        <jool.version>0.9.15</jool.version>
-        <thumbnailator.version>0.4.20</thumbnailator.version>
-        <threeten-extra.version>1.7.2</threeten-extra.version>
-        <opencv.version>4.7.0-0</opencv.version>
-        <virtualizedfx.version>21.1.0</virtualizedfx.version>
-        <wellbehavedfx.version>0.3.3</wellbehavedfx.version>
-        <metadata-extractor.version>2.18.0</metadata-extractor.version>
-        <atlantafx-base.version>2.0.1</atlantafx-base.version>
         <sass-cli-maven-plugin.version>1.0.3</sass-cli-maven-plugin.version>
         <scenicview.version>17.0.2</scenicview.version>
-        <jsr305.version>3.0.2</jsr305.version>
-        <cssfx.version>11.5.1</cssfx.version>
+        <spring-boot-javafx-starter.version>1.0.4-SNAPSHOT</spring-boot-javafx-starter.version>
+        <spring-boot.version>3.1.5</spring-boot.version>
+        <threeten-extra.version>1.7.2</threeten-extra.version>
+        <thumbnailator.version>0.4.20</thumbnailator.version>
         <usbdrivedetector.version>2.2.1</usbdrivedetector.version>
-        <java-does-usb.version>0.6.1</java-does-usb.version>
-        <oshi-core.version>6.4.6</oshi-core.version>
+        <virtualizedfx.version>21.1.0</virtualizedfx.version>
+        <wellbehavedfx.version>0.3.3</wellbehavedfx.version>
     </properties>
 
     <dependencyManagement>
+        <?SORTPOM IGNORE?>
         <dependencies>
             <!-- Spring Boot BOM -->
             <dependency>
@@ -66,63 +67,14 @@
                 <scope>import</scope>
             </dependency>
         </dependencies>
+        <?SORTPOM RESUME?>
     </dependencyManagement>
 
     <dependencies>
-        <!--        <dependency>-->
-        <!--            <groupId>com.github.oshi</groupId>-->
-        <!--            <artifactId>oshi-core</artifactId>-->
-        <!--            <version>${oshi-core.version}</version>-->
-        <!--        </dependency>-->
-        <!--        <dependency>-->
-        <!--            <groupId>com.github.oshi</groupId>-->
-        <!--            <artifactId>oshi-demo</artifactId>-->
-        <!--            <version>${oshi-core.version}</version>-->
-        <!--        </dependency>-->
         <dependency>
-            <groupId>net.codecrete.usb</groupId>
-            <artifactId>java-does-usb</artifactId>
-            <version>${java-does-usb.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>net.samuelcampos</groupId>
-            <artifactId>usbdrivedetector</artifactId>
-            <version>${usbdrivedetector.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>fr.brouillard.oss</groupId>
-            <artifactId>cssfx</artifactId>
-            <version>${cssfx.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>io.github.mkpaz</groupId>
-            <artifactId>atlantafx-base</artifactId>
-            <version>${atlantafx-base.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.openpnp</groupId>
-            <artifactId>opencv</artifactId>
-            <version>${opencv.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>io.github.palexdev</groupId>
-            <artifactId>virtualizedfx</artifactId>
-            <version>${virtualizedfx.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.twelvemonkeys.imageio</groupId>
-            <artifactId>imageio-jpeg</artifactId>
-            <version>${imageio-jpeg.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-devtools</artifactId>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>org.fxmisc.wellbehaved</groupId>
-            <artifactId>wellbehavedfx</artifactId>
-            <version>${wellbehavedfx.version}</version>
+            <groupId>com.dlsc.preferencesfx</groupId>
+            <artifactId>preferencesfx-core</artifactId>
+            <version>${preferencesfx-core.version}</version>
         </dependency>
         <!--        <dependency>-->
         <!--            <groupId>com.tobiasdiez</groupId>-->
@@ -140,37 +92,6 @@
             <version>${metadata-extractor.version}</version>
         </dependency>
         <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-            <version>${commons-io.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>commons-codec</groupId>
-            <artifactId>commons-codec</artifactId>
-            <version>${commons-codec.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jooq</groupId>
-            <artifactId>jool</artifactId>
-            <version>${jool.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>net.coobird</groupId>
-            <artifactId>thumbnailator</artifactId>
-            <version>${thumbnailator.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.threeten</groupId>
-            <artifactId>threeten-extra</artifactId>
-            <version>${threeten-extra.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.dlsc.preferencesfx</groupId>
-            <artifactId>preferencesfx-core</artifactId>
-            <version>${preferencesfx-core.version}</version>
-        </dependency>
-        <dependency>
             <groupId>com.fasterxml.jackson.dataformat</groupId>
             <artifactId>jackson-dataformat-yaml</artifactId>
             <version>${jackson-dataformat-yaml.version}</version>
@@ -181,16 +102,75 @@
             <version>${caffeine.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>jsr305</artifactId>
+            <version>${jsr305.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-logging</artifactId>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-validation</artifactId>
+            <groupId>com.twelvemonkeys.imageio</groupId>
+            <artifactId>imageio-jpeg</artifactId>
+            <version>${imageio-jpeg.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>${commons-codec.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>${commons-io.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>fr.brouillard.oss</groupId>
+            <artifactId>cssfx</artifactId>
+            <version>${cssfx.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.mkpaz</groupId>
+            <artifactId>atlantafx-base</artifactId>
+            <version>${atlantafx-base.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.palexdev</groupId>
+            <artifactId>scenicview</artifactId>
+            <version>${scenicview.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.github.palexdev</groupId>
+            <artifactId>virtualizedfx</artifactId>
+            <version>${virtualizedfx.version}</version>
+        </dependency>
+        <!--        <dependency>-->
+        <!--            <groupId>com.github.oshi</groupId>-->
+        <!--            <artifactId>oshi-core</artifactId>-->
+        <!--            <version>${oshi-core.version}</version>-->
+        <!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>com.github.oshi</groupId>-->
+        <!--            <artifactId>oshi-demo</artifactId>-->
+        <!--            <version>${oshi-core.version}</version>-->
+        <!--        </dependency>-->
+        <dependency>
+            <groupId>net.codecrete.usb</groupId>
+            <artifactId>java-does-usb</artifactId>
+            <version>${java-does-usb.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>net.coobird</groupId>
+            <artifactId>thumbnailator</artifactId>
+            <version>${thumbnailator.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>net.samuelcampos</groupId>
+            <artifactId>usbdrivedetector</artifactId>
+            <version>${usbdrivedetector.version}</version>
         </dependency>
         <dependency>
             <groupId>one.util</groupId>
@@ -198,9 +178,9 @@
             <version>0.8.1</version>
         </dependency>
         <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <scope>runtime</scope>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
+            <version>${commons-collections4.version}</version>
         </dependency>
         <dependency>
             <groupId>org.controlsfx</groupId>
@@ -219,13 +199,27 @@
             <version>${eclipse-collections-api.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.fxmisc.wellbehaved</groupId>
+            <artifactId>wellbehavedfx</artifactId>
+            <version>${wellbehavedfx.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.icroco</groupId>
             <artifactId>spring-boot-javafx-starter</artifactId>
             <version>${spring-boot-javafx-starter.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.jooq</groupId>
+            <artifactId>jool</artifactId>
+            <version>${jool.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.kordamp.ikonli</groupId>
             <artifactId>ikonli-fontawesome5-pack</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.kordamp.ikonli</groupId>
+            <artifactId>ikonli-javafx</artifactId>
         </dependency>
         <dependency>
             <groupId>org.kordamp.ikonli</groupId>
@@ -236,18 +230,21 @@
             <artifactId>ikonli-materialdesign2-pack</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.kordamp.ikonli</groupId>
-            <artifactId>ikonli-javafx</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.google.code.findbugs</groupId>
-            <artifactId>jsr305</artifactId>
-            <version>${jsr305.version}</version>
-        </dependency>
-        <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
             <version>${mapstruct.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjdk.jmh</groupId>
+            <artifactId>jmh-core</artifactId>
+            <version>${jmh.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.openjdk.jmh</groupId>
+            <artifactId>jmh-generator-annprocess</artifactId>
+            <version>${jmh.version}</version>
+            <scope>test</scope>
         </dependency>
         <!--        <dependency>-->
         <!--            <groupId>org.openjfx</groupId>-->
@@ -270,9 +267,9 @@
             <version>${javafx.version}</version>
         </dependency>
         <dependency>
-            <groupId>io.github.palexdev</groupId>
-            <artifactId>scenicview</artifactId>
-            <version>${scenicview.version}</version>
+            <groupId>org.openpnp</groupId>
+            <artifactId>opencv</artifactId>
+            <version>${opencv.version}</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -280,9 +277,9 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-collections4</artifactId>
-            <version>${commons-collections4.version}</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -310,6 +307,14 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-json</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-logging</artifactId>
+        </dependency>
         <!--        <dependency>-->
         <!--            <groupId>net.rgielen</groupId>-->
         <!--            <artifactId>javafx-weaver-spring-boot-starter</artifactId>-->
@@ -321,16 +326,13 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>org.openjdk.jmh</groupId>
-            <artifactId>jmh-core</artifactId>
-            <version>${jmh.version}</version>
-            <scope>test</scope>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.openjdk.jmh</groupId>
-            <artifactId>jmh-generator-annprocess</artifactId>
-            <version>${jmh.version}</version>
-            <scope>test</scope>
+            <groupId>org.threeten</groupId>
+            <artifactId>threeten-extra</artifactId>
+            <version>${threeten-extra.version}</version>
         </dependency>
     </dependencies>
 
@@ -369,13 +371,21 @@
                 <version>${spring-boot.version}</version>
                 <configuration>
                     <mainClass>org.icroco.picture.ImagInApp</mainClass>
+                    <jvmArguments>--enable-preview</jvmArguments>
+                    <compilerArguments>--enable-preview</compilerArguments>
                 </configuration>
                 <executions>
-                    <execution>
-                        <goals>
-                            <goal>repackage</goal>
-                        </goals>
-                    </execution>
+                    <!--                    <execution>-->
+                    <!--                        <goals>-->
+                    <!--                            <goal>repackage</goal>-->
+                    <!--                        </goals>-->
+                    <!--                    </execution>-->
+                    <!--                    <execution>-->
+                    <!--                        <id>process-aot</id>-->
+                    <!--                        <goals>-->
+                    <!--                            <goal>process-aot</goal>-->
+                    <!--                        </goals>-->
+                    <!--                    </execution>-->
                 </executions>
             </plugin>
             <plugin>
@@ -421,6 +431,11 @@
                             <artifactId>jmh-generator-annprocess</artifactId>
                             <version>${jmh.version}</version>
                         </path>
+                        <path>
+                            <groupId>org.springframework</groupId>
+                            <artifactId>spring-context-indexer</artifactId>
+                            <version>6.0.13</version>
+                        </path>
                     </annotationProcessorPaths>
                 </configuration>
             </plugin>
@@ -440,10 +455,10 @@
                 <executions>
                     <execution>
                         <id>run-sass</id>
-                        <phase>generate-resources</phase>
                         <goals>
                             <goal>run</goal>
                         </goals>
+                        <phase>generate-resources</phase>
                     </execution>
                 </executions>
             </plugin>
